--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -13,19 +13,19 @@
 
 		<table border="1">
 			<tr>
-				<td class="Square" onclick="nextMove(this);"></td>
-				<td class="Square" onclick="nextMove(this);"></td>
-				<td class="Square" onclick="nextMove(this);"></td>
+				<td id="s1" class="Square" onclick="nextMove(this);"></td>
+				<td id="s2" class="Square" onclick="nextMove(this);"></td>
+				<td id="s3" class="Square" onclick="nextMove(this);"></td>
 			</tr>
 			<tr>
-				<td class="Square" onclick="nextMove(this);"></td>
-				<td class="Square" onclick="nextMove(this);"></td>
-				<td class="Square" onclick="nextMove(this);"></td>
+				<td id="s4" class="Square" onclick="nextMove(this);"></td>
+				<td id="s5" class="Square" onclick="nextMove(this);"></td>
+				<td id="s6" class="Square" onclick="nextMove(this);"></td>
 			</tr>
 			<tr>
-				<td class="Square" onclick="nextMove(this);"></td>
-				<td class="Square" onclick="nextMove(this);"></td>
-				<td class="Square" onclick="nextMove(this);"></td>
+				<td id="s7" class="Square" onclick="nextMove(this);"></td>
+				<td id="s8" class="Square" onclick="nextMove(this);"></td>
+				<td id="s9" class="Square" onclick="nextMove(this);"></td>
 			</tr>
 		</table>
 		<script src="script.js"></script>
