--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -25,7 +25,7 @@
 			<tr>
 				<td id="s7" class="Square" onclick="nextMove(this);"></td>
 				<td id="s8" class="Square" onclick="nextMove(this);"></td>
-				<td id="s9 .+" class="Square" onclick="nextMove(this);"></td>
+				<td id="s9" class="Square" onclick="nextMove(this);"></td>
 			</tr>
 		</table>
 		<script src="script.js"></script>
