--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -10,10 +10,12 @@
 			<h1 align = "center"> Tic-Tac-Toe</h1>
 		
 		<div id="message">messages here</div>
+		<button type = "button" id="reset-button" onclick="startGame()">Reset</button>
+		<div id="score" align = "right">score here</div>
 
 		<table border="1">
 			<tr>
-				<td id="s1" class="Square" onclick="nextMove(this);"></td>
+				<td id="s1" class="Square" onclick="nextMove(this);"></td>  
 				<td id="s2" class="Square" onclick="nextMove(this);"></td>
 				<td id="s3" class="Square" onclick="nextMove(this);"></td>
 			</tr>
