correct updation of scores

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -7,7 +7,7 @@
 
 	<body onload="startGame();">
 	
-			<h1 align = "center"> Tic-Tac-Toe</h1>
+			<h1 align = "center" font = "comic-sans"> Tic-Tac-Toe</h1>
 		
 		<div id="message">messages here</div>
 		<button type = "button" id="reset-button" onclick="startGame()">Reset</button>
