improved tie detection added

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -7,10 +7,10 @@
 
 	<body onload="startGame();">
 	
-			<h1 align = "center" font = "comic-sans"> Tic-Tac-Toe</h1>
+			<h1 align = "center"> Tic-Tac-Toe</h1>
 		
 		<div id="message">messages here</div>
-		<button type = "button" id="reset-button" onclick="startGame()">Reset</button>
+		<button type = "button1" class = button1 id="reset-button" onclick="startGame()">Reset</button>
 		<div id="score" align = "right">score here</div>
 
 		<table border="1">
