testing for positioning of elements on screen

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -11,7 +11,7 @@
 		
 		<div id="message">messages here</div>
 		<button type = "button1" class = button1 id="reset-button" onclick="startGame()">Reset</button>
-		<div id="score" align = "right">score here</div>
+		<div id="score" style = "position: absolute; left: 10px; top: 500px">score here</div>
 
 		<table border="1">
 			<tr>
