proper score display for both players as well as number of draw games

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -11,8 +11,9 @@
 		
 		<div id="message">messages here</div>
 		<button type = "button1" class = button1 id="reset-button" onclick="startGame()">Reset</button>
-		<div id="score" style = "position: absolute; left: 10px; top: 500px">score here</div>
-
+		<div id="P1_score" style = "position: absolute; left: 10px; top: 700px">score here</div>
+		<div id="P2_score" style = "position: absolute; right: 10px; top: 700px">score here</div>
+		<div id="draws" style = "position: absolute; left: 750px; top: 700px"  >score here</div>
 		<table border="1">
 			<tr>
 				<td id="s1" class="Square" onclick="nextMove(this);"></td>  
