--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -9,11 +9,12 @@
 	
 			<h1 align = "center"> Tic-Tac-Toe</h1>
 		
-		<div id="message">messages here</div>
-		<button type = "button1" class = button1 id="reset-button" onclick="startGame()">Reset</button>
+		<div id="message" style = "position:absolute;  left:750px; top: 150px;">messages here</div>
+		<button type = "button1" class = button1 id="reset-button" onclick=startGame()> Reset </button>
+		<button type = "button2" class = button2 id="play-again" onclick=playAgain()> Play Again! </button>
 		<div id="P1_score" style = "position: absolute; left: 10px; top: 700px">score here</div>
 		<div id="P2_score" style = "position: absolute; right: 10px; top: 700px">score here</div>
-		<div id="draws" style = "position: absolute; left: 750px; top: 700px"  >score here</div>
+		<div id="draws" style = "position: absolute; left: 750px; top: 700px">score here</div>
 		<table border="1">
 			<tr>
 				<td id="s1" class="Square" onclick="nextMove(this);"></td>  
