--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -4,17 +4,17 @@
 		<link rel="stylesheet" href="style2.css">
 
 	</head>
-
+	
 	<body onload="startGame();">
 	
 			<h1 align = "center"> Tic-Tac-Toe</h1>
 		
-		<div id="message" style = "position:absolute;  left:750px; top: 150px;">messages here</div>
+		<div class = "a" id="message">messages here</div>
 		<button type = "button1" class = button1 id="reset-button" onclick=startGame()> Reset </button>
 		<button type = "button2" class = button2 id="play-again" onclick=playAgain()> Play Again! </button>
-		<div id="P1_score" style = "position: absolute; left: 10px; top: 700px">score here</div>
-		<div id="P2_score" style = "position: absolute; right: 10px; top: 700px">score here</div>
-		<div id="draws" style = "position: absolute; left: 750px; top: 700px">score here</div>
+		<div id="P1_score" style = "position: absolute; left: 10px; top: 700px">P1 score here</div>
+		<div id="P2_score" style = "position: absolute; right: 10px; top: 700px">P2 score here</div>
+		<div class= "b" id="draws" style =" text-align:center;" >Ties here</div>
 		<table border="1">
 			<tr>
 				<td id="s1" class="Square" onclick="nextMove(this);"></td>  
