reset button now calls the resetGame() instead of startGame()

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -10,7 +10,7 @@
 			<h1 align = "center"> Tic-Tac-Toe</h1>
 		
 		<div class = "a" id="message">messages here</div>
-		<button type = "button1" class = button1 id="reset-button" onclick=startGame()> Reset </button>
+		<button type = "button1" class = button1 id="reset-button" onclick=resetGame()> Reset </button>
 		<button type = "button2" class = button2 id="play-again" onclick=playAgain()> Play Again! </button>
 		<div id="P1_score" style = "position: absolute; left: 10px; top: 700px">P1 score here</div>
 		<div id="P2_score" style = "position: absolute; right: 10px; top: 700px">P2 score here</div>
