--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -32,7 +32,7 @@
 				<td id="s9" class="Square" onclick="nextMove(this);"></td>
 			</tr>
 		</table>
-		<script src="script.js"></script>
+		<script src="/scripts/script.js"></script>
 
 	</body>
 </html>
